--- a/aula02/package.json
+++ b/aula02/package.json
@@ -4,8 +4,7 @@
   "description": "coisa qualquer",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "ex":"node exercicio1.js",
+    "start":"exercicio.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
