--- a/aula02/package.json
+++ b/aula02/package.json
@@ -4,7 +4,7 @@
   "description": "coisa qualquer",
   "main": "index.js",
   "scripts": {
-    "start":"exercicio.js",
+    "start":"node --watch exercicio1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
